--- a/hugo/themes/hugo-clarity/assets/sass/_variables.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_variables.sass
@@ -6,7 +6,10 @@ $light: #fff
 $haze: #fafafa
 $xhaze: darken($haze, 11%)
 $bg: #002538
+$header_bg: #CAD5D8
 $theme: #0077b8
+$buttonbg: #B5B6B7
+$excerptbg: #6F7071
 
 @mixin  content()
   --maxWidth: 1440px
@@ -33,7 +36,8 @@ html
   --gray: #020202
   --accent: var(--gray)
   --text: #575757
-  --header-text: var(--dark)
+  //--header-text: var(--dark)
+  --header-text: var(--light)
   --font: 'Metropolis', sans-serif
   --theme: #0077b8
   --ease: cubic-bezier(.19,1,.22,1)
