--- a/hugo/themes/hugo-clarity/assets/sass/_base.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_base.sass
@@ -146,3 +146,11 @@ blockquote
   background: var(--haze)
 p
   padding: 0.8rem 0
+
+article
+  color: $light
+  background: var(--gunmetal)
+  border-radius: 1em
+  padding: 1em
+  margin-top: 1em
+  margin-bottom: 1em
