--- a/hugo/themes/hugo-clarity/assets/sass/_components.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_components.sass
@@ -119,7 +119,7 @@
   display: inline-flex
   padding: 0.5rem 1.5rem
   text-transform: uppercase
-  border: 1px solid $theme
+  // border: 1px solid $theme
   border-radius: 1.5rem
   font-size: 0.9rem
   align-items: center
@@ -130,7 +130,7 @@
     border: 1px solid darken($theme, 20%)
     
   &_translucent
-    background-color: rgba($theme, 0.15)
+    // background-color: rgba($theme, 0.15)
     color: $theme
     border: 1px solid transparent
   &_tally
@@ -361,6 +361,7 @@
         right: 0.45rem
 
 .excerpt
+  color: var(--light)
   &_header, &_footer
     padding: 1rem
   &_footer
@@ -377,6 +378,10 @@
       @media screen and (min-width: 769px) 
         grid-template-columns: 2fr 7fr
         grid-gap: 1rem
+
+.nav_item
+  color: var(--dark)
+
 .sidebar
   &_inner
     color: var(--header-text)
@@ -430,7 +435,8 @@
   flex: 1
   justify-content: flex-end
   svg
-    fill: $haze
+    // fill: $haze
+    fill: --var(dark)
     margin-left: 0.75rem
 
 .img
