--- a/hugo/themes/hugo-clarity/assets/sass/_variables.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_variables.sass
@@ -9,7 +9,6 @@ $bg: #002538
 $header_bg: #CAD5D8
 $theme: #0077b8
 $buttonbg: #B5B6B7
-$excerptbg: #6F7071
 
 @mixin  content()
   --maxWidth: 1440px
@@ -34,6 +33,8 @@ html
   --bg: #002538
   --haze: #f2f2f2
   --gray: #020202
+  --gunmetal: #6F7071
+
   --accent: var(--gray)
   --text: #575757
   //--header-text: var(--dark)
@@ -49,7 +50,8 @@ html
   --shadow: rgba(0,0,0,0.12)
   --translucent: rgba(0,0,0,0.05)
   --translucent-light: rgba(255,255,255,0.05)
-  --post-bg: var(--light)
+  // --post-bg: var(--light)
+  --post-bg: var(--gunmetal)
   --choice-bg: var(--haze)
   --ease: cubic-bezier(0.39, 0.575, 0.565, 1)
   --easing: cubic-bezier(.19,1,.22,1)
