--- a/hugo/themes/hugo-clarity/assets/sass/_variables.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_variables.sass
@@ -9,6 +9,7 @@ $bg: #002538
 $header_bg: #CAD5D8
 $theme: #0077b8
 $buttonbg: #B5B6B7
+$linkcolor: #91B807
 
 @mixin  content()
   --maxWidth: 1440px
@@ -33,7 +34,7 @@ html
   --bg: #002538
   --haze: #f2f2f2
   --gray: #020202
-  --gunmetal: #6F7071
+  --gunmetal: #2B333D
 
   --accent: var(--gray)
   --text: #575757
@@ -42,7 +43,8 @@ html
   --font: 'Metropolis', sans-serif
   --theme: #0077b8
   --ease: cubic-bezier(.19,1,.22,1)
-  --code-bg: var(--bg)
+  // --code-bg: var(--bg)
+  --code-bg: var(--gray)
   --table-bg: var(--light)
   --table-haze: var(--haze)
   --table-border: #dedede
