Theming tweaks, wip

--- a/hugo/themes/hugo-clarity/assets/sass/_base.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_base.sass
@@ -18,9 +18,10 @@ body
   font-family: var(--font)
   // orig background: var(--choice-bg)
 
-  background-image: url("/images/background.jpg");
-  background-repeat: repeat-x;
-  background-attachment: fixed;
+  background: var(--body-background);
+  //background-image: url("/images/background.jpg");
+  //background-repeat: repeat-x;
+  //background-attachment: fixed;
 
   color: var(--text)
   font-size: 1.1rem
