--- a/hugo/themes/hugo-clarity/assets/sass/_components.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_components.sass
@@ -4,7 +4,8 @@
   justify-content: space-between
   @include content
   &_active
-    background-color: rgba($light, 0.05)
+    //background-color: rgba($light, 0.05)
+    background-color: rgba($darker-light, 0.5)
   &, &_body
   &_icon
     width: 0.7rem
@@ -385,7 +386,7 @@
         grid-gap: 1rem
 
 .nav_item
-  color: var(--dark)
+  color: var(--light)
 
 .sidebar
   &_inner
