--- a/hugo/themes/hugo-clarity/assets/sass/_syntax.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_syntax.sass
@@ -54,8 +54,8 @@ code
       font-size: 67%
       opacity: 0.5
       color: var(--light)
-    &:hover .lang
-      opacity: 0.1
+    //&:hover .lang
+    //  opacity: 0.1
   & &
     margin: 0
   pre
