--- a/hugo/themes/hugo-clarity/assets/sass/_variables.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_variables.sass
@@ -3,10 +3,13 @@ $icons: '../icons/'
 $images: '../images/'
 
 $light: #fff
+$darker-light: #81818a
 $haze: #fafafa
 $xhaze: darken($haze, 11%)
 $bg: #002538
-$header_bg: #CAD5D8
+//$header_bg: #CAD5D8
+//$header_bg: #55555e
+$header_bg: #a8a8af
 $theme: #0077b8
 $buttonbg: #B5B6B7
 $linkcolor: #91B807
@@ -40,6 +43,7 @@ html
   --text: #575757
   //--header-text: var(--dark)
   --header-text: var(--light)
+  --body-background: #1F4959;
   --font: 'Metropolis', sans-serif
   --theme: #0077b8
   --ease: cubic-bezier(.19,1,.22,1)
